fix table headers in dark mode

--- a/web/packages/web-client/styles/pages/scorecard.scss
+++ b/web/packages/web-client/styles/pages/scorecard.scss
@@ -45,7 +45,7 @@
       }
     }
     th {
-      color: $black;
+      color: inherit;
       font-size: 0.75rem;
       text-align: left;
       display: table-cell;
